# C8.Executor

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: camada-08-contratos-rust.md  homologacao-manual-2026-04-09.md  manual-tests-curls-localhost-8087.txt
src/: lib.rs  main.rs
src/adapters/inbound/: http.rs
src/adapters/outbound/: in_memory.rs  kafka.rs  mod.rs  postgres.rs
src/application/: service.rs
src/domain/: error.rs  events.rs  mod.rs  model.rs
src/ports/: mod.rs
