[package]
name = "c8-executor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c8-executor"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
rdkafka = { version = "0.36", features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
